fix button alignment

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -42,7 +42,7 @@ $featureblocks-bg-color: #1C1819;
             margin: 2em auto;
         }
         & > .contact-link {
-            margin-top: 3em;
+            margin: 3em auto;
             height: 72px;
             width: 380px;
             padding: 0;
